k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: krmp-d2hub-idock.9rum.cc/dev-test/repo_80b51d6a3219
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  annotations:
    kargo.9rum.cc/app-name: app_ce55527b8490
    kargo.9rum.cc/phase: dev
  labels:
    app.kubernetes.io/managed-by: kargocd
spec:
  selector:
    app: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
